# aria2-ws-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: callback.rs  client.rs  error.rs  lib.rs  method.rs  options.rs  response.rs  utils.rs
tests/: method.rs  test.rs
