[package]
name = "aria2-ws"
version = "0.3.0"
edition = "2021"
description = "An aria2 websocket jsonrpc API with notification support"
repository = "https://github.com/WOo0W/aria2-ws-rs"
license = "MIT"
keywords = ["aria2", "jsonrpc"]
categories = ["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
test-log = "0.2"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.17"
futures = "0.3"
base64 = "0.13"
snafu = "0.7"
log = "0.4"
serde_with = "1"
chrono = { version = "0.4", features = ["serde"] }
